--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "devDependencies": {
         "@types/node": "^20.11.9",
+        "tsc-watch": "^6.0.4",
         "typescript": "^5.3.3",
         "vite": "^5.0.12"
     }
