--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,9 +5,12 @@
     "main": "index.js",
     "scripts": {
         "build": "tsc",
-        "dev": "tsc-watch --onSuccess \"node dist/index.js\""
+        "dev": "tsc-watch --onSuccess \"npx vite-node src/index.ts\""
     },
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "mongodb": "^6.3.0"
+    }
 }
