--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,6 +11,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/body-parser": "^1.19.5",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
         "mongodb": "^6.3.0"
     }
 }
