--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,9 +14,11 @@
         "@types/body-parser": "^1.19.5",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/request-ip": "^0.0.41",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "express": "^4.18.2",
-        "mongodb": "^6.3.0"
+        "mongodb": "^6.3.0",
+        "request-ip": "^3.3.0"
     }
 }
