--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,6 +1,6 @@
 {
     "name": "farodyne-frontend",
-    "version": "0.0.0",
+    "version": "1.0.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
@@ -8,7 +8,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "vue": "^3.4.15"
+        "sass": "^1.70.0",
+        "vue": "^3.4.15",
+        "vue-facing-decorator": "^3.0.4",
+        "vue-router": "^4.2.5"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.0.3",
