--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,6 +8,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "axios": "^1.6.7",
         "sass": "^1.70.0",
         "vue": "^3.4.15",
         "vue-facing-decorator": "^3.0.4",
