--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,13 +9,14 @@
     },
     "dependencies": {
         "axios": "^1.6.7",
-        "sass": "^1.70.0",
         "vue": "^3.4.15",
         "vue-facing-decorator": "^3.0.4",
         "vue-router": "^4.2.5"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.0.3",
+        "farodyne-common": "*",
+        "sass": "^1.70.0",
         "vue-tsc": "^1.8.27"
     }
 }
