Further fixes for image content paths.

--- a/apps/frontend/.env
+++ b/apps/frontend/.env
@@ -9,4 +9,5 @@
 
 # Backend API stuff.
 #VITE_BACKEND_BASE_URL=https://farodyne.com
+VITE_CONTENT_BASE=https://www.farodyne.com/media
 VITE_BACKEND_BASE_URL=http://localhost:4000
