--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "axios": "^1.6.7",
+        "v-lazy-image": "^2.1.1",
         "vue": "^3.4.15",
         "vue-facing-decorator": "^3.0.4",
         "vue-router": "^4.2.5"
