--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -18,8 +18,9 @@
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "express-basic-auth": "^1.2.1",
+        "farodyne-common": "*",
         "mongodb": "^6.3.0",
-        "request-ip": "^3.3.0",
-        "farodyne-common": "*"
+        "request-ip": "^3.3.0"
     }
 }
