--- a/apps/frontend/.env.production
+++ b/apps/frontend/.env.production
@@ -7,6 +7,5 @@
 #
 # https://vitejs.dev/guide/env-and-mode.html
 
-# Backend API stuff.
-VITE_CONTENT_BASE=https://www.farodyne.com/media
-VITE_BACKEND_BASE_URL=http://localhost:4000
+# Production backend base URL.
+VITE_BACKEND_BASE_URL=https://farodyne.com
