Added run target to backend project.

--- a/apps/backend/Makefile
+++ b/apps/backend/Makefile
@@ -11,8 +11,14 @@ help:
 	@echo "------------------------------------------------------------------------"
 	@grep -E '^[a-zA-Z0-9_/%\-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-20s\033[0m %s\n", $$1, $$2}'
 
+.PHONY: deps
 deps: ## Installs the project dependencies.
 	pnpm install
 
+.PHONY: dev
 dev: ## Runs the development environment.
 	pnpm run dev
+
+.PHONY: run
+run: ## Runs the application.
+	pnpm run run
