--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "The mono-repository for the Farodyne homepage.",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build:common": "pnpm install && cd ./packages/common && pnpm run build",
+        "run:backend": "pnpm run build:common && cd ./apps/backend && pnpm install --frozen-lockfile && pnpm run start"
     },
     "keywords": [],
     "author": "Federico Engler",
