Added additional fixes for build.

--- a/apps/frontend/Makefile
+++ b/apps/frontend/Makefile
@@ -16,3 +16,6 @@ deps: ## Installs the project dependencies.
 
 dev: ## Runs the development environment.
 	pnpm run dev
+
+build: ## Build application for production.
+	pnpm run build
