Fixes to backend media URL.

--- a/apps/frontend/.env
+++ b/apps/frontend/.env
@@ -8,5 +8,5 @@
 # https://vitejs.dev/guide/env-and-mode.html
 
 # Backend API stuff.
-VITE_CONTENT_BASE=https://www.farodyne.com/media
+VITE_CONTENT_BASE=https://farodyne.com/media
 VITE_BACKEND_BASE_URL=http://localhost:4000
